<resources>
    <string name="app_name">SausageMakerHelper</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Sausage Maker Helper</string>
    <string name="nav_header_subtitle" translatable="false">hotchenkov@list.ru</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="refrigerator"> Refrigerator</string>
    <string name="heat_treatment"> Heat Treatment</string>
    <string name="main" translatable="false"> Main</string>
    <string name="heating_notification_title_template">Heating: %1$s</string>
    <string name="heating_notification_placeholder_text_template" translatable="false"></string>
    <string name="action_share" translatable="false">Share</string>
    <string name="action_reply" translatable="false">Reply</string>
    <string name="esp_hostname" translatable="false">cadovnik_esp8266.local</string>
    <string name="sausage_maker">Sausage Calculator</string>
    <string name="salting_calculator">Salting Calculator</string>
    <string name="weight_meat">Weight of meat</string>
    <string name="salting_percent">Salting percent(%)</string>
    <string name="salting_percent_default" translatable="false">2.2</string>
    <string name="dry_wet_salting">Wet Salting</string>
    <string name="phosphates">With Phosphates</string>
    <string name="sodium_ascorbate">With Sodium ascorbate</string>
    <string name="salting_result_header">Results :</string>
    <string name="salting_calculate">Calculate</string>
    <string name="salting_save">Save Salting</string>
    <string name="salting_history">View History</string>
    <string name="nitrite_salt_percent">Nitrite salt(%)</string>
    <string name="nitrite_salt_default" translatable="false">55</string>
    <string name="datefrom">Date From</string>
    <string name="dateto">Date To</string>
    <string name="sensor_name">Sensor Name:</string>
    <string name="sensor_kind">Sensor Kind:</string>
    <string name="value_time">Value Time:</string>
    <string name="get_lasted">Get Lasted</string>
    <string name="start_heating">Start</string>
    <string name="stop_heating">Stop</string>
    <string name="heating_switch">Heating</string>
    <string name="convection">Convection</string>
    <string name="current_heating_mode">Current Mode</string>
    <string name="value_sensor">Value:</string>
    <string name="refrigerator_menu">Refrigerator</string>
    <string name="sausage_notes">Sausage Main</string>
    <string name="sausage_calendar">Calendar</string>
    <string name="sausage_archive">Archive</string>
    <string name="create_sausage">Make sausage</string>
    <string name="sausage_card_description">Description</string>
    <string name="sausage_name">Sausage Name:</string>
    <string name="sausage_spice_name">Spice Name:</string>
    <string name="sausage_spice_weight">Spice weight  (g):</string>
    <string name="save_sausage_dialog_title">Save Sausage</string>
    <string name="sausage_add_spice">Add Spice</string>
    <string name="sausage_brine">Brine</string>
    <string name="sausage_nitrite_salt">Nitrite salt</string>
    <string name="sausage_phosphates">Phosphates</string>
    <string name="sausage_sodium_ascorbate">Sodium ascorbate</string>
    <string name="sausage_rock_salt">Rock salt</string>
    <string name="sausage_options">Sausage options</string>
    <string name="heating_probeTemp">Probe Temperature</string>
    <string name="heating_BoxTemp">Inside Box Temperature</string>
    <string name="heat_waterPump">Water Pump</string>
    <string name="heating_esp_getCurrentState">Get Current State</string>
    <string name="heating_change_mode">Change mode</string>
    <string name="heating_ignition">Ignition</string>
    <string name="heating_heat_state_none">None</string>
    <string name="heating_heat_state_drying">Drying</string>
    <string name="heating_heat_state_frying">Frying</string>
    <string name="heating_heat_state_boiling">Boiling</string>
    <string name="heating_heat_mode_manual">Manual</string>
    <string name="heating_heat_mode_auto">Auto</string>
    <string name="heating_heat_mode_smoking">Smoking</string>
    <string name="heating_heat_mode_title">Mode:</string>
    <string name="heating_heat_status_title">State:</string>
    <string name="heating_smoking_air_switch">Smoking</string>
    <string name="settings">Settings</string>
    <string name="smokehouse_settings">Smokehouse Settings</string>
    <string name="esp_soft_ap" translatable="false">ESP Soft AP</string>

    <string name="notification_stop_action_text" translatable="false">Stop</string>
    <string name="notification_text_title" translatable="false">Awake is running</string>
    <string name="notification_text_content" translatable="false">Click to open the app</string>
    <string name="sausage_recepts">Sausage Recepts</string>

</resources>
