<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sausage_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sausage_name" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meat_weight_value"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight_meat"
                    android:inputType="numberSigned"
                    android:numeric="signed"
                    app:helperText="0" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/salting_percent_value"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salting_percent"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:text="@string/salting_percent_default"
                    app:helperText="@string/salting_percent_default" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nitrite_salt_percent_value"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@color/colorAccent"
                    android:drawableLeft="@color/colorAccent"
                    android:drawableTop="@color/colorAccent"
                    android:drawableEnd="@color/colorAccent"
                    android:drawableRight="@color/colorAccent"
                    android:drawableBottom="@color/colorAccent"
                    android:drawablePadding="2dp"
                    android:drawableTint="@color/colorAccent"
                    android:drawableTintMode="src_over"
                    android:hint="@string/nitrite_salt_percent"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:text="@string/nitrite_salt_default"
                    app:helperText="@string/nitrite_salt_default" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sausage_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sausage_card_description" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/dry_wet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dry_wet_salting" />

            <CheckBox
                android:id="@+id/phosphates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phosphates" />

            <CheckBox
                android:id="@+id/sodium_ascorbate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sodium_ascorbate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/salting_result_header"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:textSize="25sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/salting_result_header" />

                <Button
                    android:id="@+id/add_spice"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/sausage_add_spice" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sausage_result"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
        </LinearLayout>
    </LinearLayout>
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_addButtonPlusIconColor="@color/half_black"
        app:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/salting_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/white"
        app:fab_icon="@drawable/round_sausage"
        app:fab_title="@string/salting_calculate"
        app:fab_colorPressed="@color/white_pressed"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/salting_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/white"
        app:fab_icon="@drawable/round_sausage"
        app:fab_title="@string/salting_save"
        app:fab_colorPressed="@color/white_pressed"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/salting_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/white"
        app:fab_title="@string/salting_history"
        app:fab_colorPressed="@color/white_pressed"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>