<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_card"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_extra_weight_meat"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/meat"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_meat" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/card_extra_rock_salt"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/rock_salt"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sausage_rock_salt" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_extra_nitrite_salt"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/nitrite_salt"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sausage_nitrite_salt" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_extra_phosphates"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/additives"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phosphates" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_extra_sodium_ascorbate"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/additives"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sodium_ascorbate" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_extra_brine"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/brine"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sausage_brine" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>